# nextcloud-spgverein-app

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  CHANGELOG.de.md  CHANGELOG.md  Cargo.toml  README.md  composer.json  package-lock.json  package.json  vue.config.js
appinfo/: app.php  application.php  info.xml  routes.php
css/: app.css  print.css  style.css
js/: 1.spgverein.js  app.js  app.vue  chunk-vendors.js  labels-modal.vue  member.vue  members.js  members.vue  modal.vue  package-lock.json  package.json  print.js  script.js  webpack.config.js
js/lib/: jsLabel2PDF.js
l10n/: de.json
lib/AppInfo/: Application.php
lib/Controller/: ClubController.php  FileController.php  LabelController.php  Labels.php  PageController.php  fpdf.php
lib/Model/: BankAccount.php  Member.php  MemberGroup.php
lib/Repository/: Club.php  ClubException.php  MemberSearchProvider.php
lib/Repository/Listeners/: ClubCreated.php  ClubDeleted.php
lib/Settings/: Section.php  Settings.php
src/: app-details-sidebar.vue  app-label-sidebar.vue  app-sidebar.vue  app.vue  labels.vue  main.js  main.rs  member.rs  member.vue  members.vue  opts.rs  store.js  v3.rs  v4.rs
src/router/: index.js
src/store/: details.js  index.js  labels.js
templates/: admin.php  index.php
templates/content/: index.php
templates/navigation/: index.php
templates/settings/: index.php
tests/: bootstrap.php
tests/Integration/: AppTest.php
tests/Unit/Controller/: PageControllerTest.php
tests/unit/: store.spec.js
