[package]
name = "spg-parser"
version = "0.12.0"
authors = ["Marc Schreiber <info@schrieveslaach.de>"]
edition = "2018"

resolver = "2"

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"]}
color-eyre = "0.5"
derive_builder = "0.10"
encoding_rs = "0.8"
oxidized-mdf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.7"
structopt = "0.3"
