[package]
name = "spg-parser"
version = "0.12.0"
authors = ["Marc Schreiber <info@schrieveslaach.de>"]
edition = "2018"

resolver = "2"

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "3.1", features = ["derive"]}
color-eyre = "0.6"
derive_builder = "0.11"
encoding_rs = "0.8"
iban_validate = { version = "4.0", features = ["serde"] }
oxidized-mdf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.7"
